<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keenon.peanut.demo.device.DoorDemo">

    <CheckBox
        android:id="@+id/cb_disinfect_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/auto_send_disinfect_status"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cb_disinfect_liquid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/auto_send_disinfect_liquid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_disinfect_status" />

    <CheckBox
        android:id="@+id/cb_disinfect_cabin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/disinfect_cabin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_disinfect_liquid" />

    <CheckBox
        android:id="@+id/cb_disinfect_drainage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/disinfect_drainage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_disinfect_cabin" />

    <CheckBox
        android:id="@+id/cb_disinfect_atomizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/disinfect_atomizer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_disinfect_drainage" />

    <CheckBox
        android:id="@+id/cb_disinfect_ultraviolet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/disinfect_ultraviolet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_disinfect_atomizer" />

    <Button
        android:id="@+id/btn_disinfect_fan_high"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:text="@string/disinfect_fan_high"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cb_disinfect_ultraviolet" />

    <Button
        android:id="@+id/btn_disinfect_fan_low"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:text="@string/disinfect_fan_low"
        app:layout_constraintBottom_toBottomOf="@+id/btn_disinfect_fan_high"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@+id/btn_disinfect_fan_high"
        app:layout_constraintTop_toTopOf="@+id/btn_disinfect_fan_high" />

    <include layout="@layout/layout_right_scroll_log" />

</androidx.constraintlayout.widget.ConstraintLayout>
