<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.keenon.peanut.demo.base.BaseDemo">

    <Button
        android:id="@+id/btn_query_all_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/auto_pilot_query_dest"
        app:layout_constraintBottom_toTopOf="@+id/btn_query_power"
        app:layout_constraintEnd_toStartOf="@+id/include"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_query_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/query_power"
        app:layout_constraintBottom_toTopOf="@+id/btn_query_mileage"
        app:layout_constraintEnd_toEndOf="@+id/btn_query_all_dest"
        app:layout_constraintStart_toStartOf="@+id/btn_query_all_dest"
        app:layout_constraintTop_toBottomOf="@+id/btn_query_all_dest" />

    <Button
        android:id="@+id/btn_query_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/query_mileage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_query_power"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_query_power"
        app:layout_constraintTop_toBottomOf="@+id/btn_query_power"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_arm_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="300dp"
        android:text="@string/arm_info"
        app:layout_constraintStart_toStartOf="@+id/btn_sync_params"
        app:layout_constraintTop_toBottomOf="@+id/btn_query_mileage" />

    <Button
        android:id="@+id/btn_query_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/query_ip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/btn_stm32_version"
        app:layout_constraintTop_toTopOf="@+id/btn_stm32_version"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_stm32_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/stm32_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_query_ip"
        app:layout_constraintStart_toEndOf="@+id/btn_sync_params"
        app:layout_constraintTop_toBottomOf="@+id/btn_slam_location"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_sync_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/query_params"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_stm32_version"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_stm32_version"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_slam_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query_location"
        app:layout_constraintEnd_toEndOf="@+id/btn_stm32_version"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/btn_stm32_version"
        app:layout_constraintTop_toTopOf="@+id/btn_arm_info" />

    <include
        android:id="@+id/include"
        layout="@layout/layout_right_scroll_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_query_all_dest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

</androidx.constraintlayout.widget.ConstraintLayout>
